--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="En Geonicsa nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.">
+    <meta name="description"
+        content="En Geonicsa nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.">
     <meta name="keywords" content="control de materiales, estudios geotecnicos, estudios de suelos, perforacion">
     <title>GEONICSA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,6 +50,8 @@
                             <li><a class="dropdown-item" href="estudios-geotecnicos" data-section="nav"
                                     data-value="servicio1">Estudios de
                                     suelos</a></li>
+                            <li><a class="dropdown-item" href="estudios-ambientales.html" data-section="nav"
+                                    data-value="servicio5">Estudios ambientales</a></li>
                             <li><a class="dropdown-item" href="control-de-calidad-de-materiales" data-section="nav"
                                     data-value="servicio2">Control de
                                     calidad de materiales</a></li>
@@ -118,7 +121,7 @@
     <div class="container servicios-inicio">
         <h2 class="text-center" data-section="inicio" data-value="titulo-servicios">NUESTROS SERVICIOS</h2>
         <div class="container">
-            <div class="row">
+            <div class="row d-flex justify-content-center">
 
                 <div class="col-md col-lg-3 ">
                     <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
@@ -133,6 +136,23 @@
                                 <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio1">
                                     Estudios
                                     Geotécnicos</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md col-lg-3 ">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
+                            <a href="estudios-geotecnicos.html"
+                                class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
+                                    viewBox="0 0 16 16" style="width:2rem !important;">
+                                    <path
+                                        d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
+                                </svg>
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio5">
+                                    Estudios
+                                    ambientales</h3>
                             </a>
                         </div>
                     </div>
@@ -156,6 +176,9 @@
                     </div>
                 </div>
 
+
+            </div>
+            <div class="row d-flex justify-content-center">
                 <div class="col-md col-lg-3 ">
                     <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body d-flex justify-content-center align-items-center">
@@ -190,6 +213,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
 
 
@@ -203,7 +227,7 @@
     <div class="container-fluid azul texto-blanco">
         <h2 class="text-center " data-section="nosotros" data-value="titulo">SOBRE NOSOTROS</h2>
         <div class="container">
-            <div class="row">
+            <div class="row ">
                 <div class="col-md">
                     <p data-section="nosotros" data-value="info-1">Geonicsa, una firma consultora con más de dos décadas
                         de experiencia, se estableció con el
@@ -380,7 +404,8 @@
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="https://www.linkedin.com/company/geonicsa/about/?viewAsMember=true" target="_blank">
+                                href="https://www.linkedin.com/company/geonicsa/about/?viewAsMember=true"
+                                target="_blank">
                                 <img class="d-inline" src="./img/icons/linkedin_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">LinkedIn</p>
@@ -388,7 +413,8 @@
                         </li>
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="https://www.facebook.com/profile.php?id=61557121580415&mibextid=ZbWKwL" target="_blank">
+                                href="https://www.facebook.com/profile.php?id=61557121580415&mibextid=ZbWKwL"
+                                target="_blank">
                                 <img class="d-inline" src="./img/icons/facebook_icon.png"
                                     style="width:2rem !important; height: 2rem !important;">
                                 <p class="d-inline">Facebook</p>
