--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -45,6 +45,8 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
                                     data-value="servicio1">Estudios geotécnicos</a></li>
+                            <li><a class="dropdown-item" href="estudios-ambientales.html" data-section="nav"
+                                    data-value="servicio5">Estudios ambientales</a></li>
                             <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
                                     data-value="servicio2">Control de
                                     calidad de materiales</a></li>
