--- a/estudios-ambientales.html
+++ b/estudios-ambientales.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Control de calidad de materiales | GEONICSA</title>
+    <title>Estudios ambientales | GEONICSA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="static/styles.css" rel="stylesheet">
@@ -44,8 +44,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
-                                data-value="servicio1">Estudios geotécnicos</a></li>
-                                <li><a class="dropdown-item" href="estudios-ambientales.html" data-section="nav"
+                                    data-value="servicio1">Estudios geotécnicos</a></li>
+                            <li><a class="dropdown-item" href="estudios-ambientales.html" data-section="nav"
                                     data-value="servicio5">Estudios ambientales</a></li>
                             <li><a class="dropdown-item" href="control-de-calidad-de-materiales" data-section="nav"
                                     data-value="servicio2">Control de
@@ -83,7 +83,7 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3 data-section="control-materiales" data-value="titulo">CONTROL DE CALIDAD DE MATERIALES</h3>
+        <h3 data-section="estudios-ambientales" data-value="titulo">ESTUDIOS AMBIENTALES</h3>
     </div>
 
 
@@ -91,52 +91,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md descripcion-servicio">
-                    <p data-section="control-materiales" data-value="resumen">En Geonicsa, nuestro compromiso con la
-                        calidad va más allá de la geotecnia. Ofrecemos servicios especializados en el control de calidad
-                        de materiales, asegurando que cada componente utilizado en su proyecto cumpla con los más altos
-                        estándares. Desde la selección meticulosa del banco de materiales hasta la supervisión en el
-                        sitio, nuestro equipo se asegura de que cada elemento contribuya a la excelencia y durabilidad
-                        de su proyecto.
+                    <p data-section="estudios-ambientales" data-value="resumen">Nuestros profesionales consultores en
+                        medio ambiente cuentan con una excelente disposición y habilidad en temas ambientales, con una
+                        experiencia lograda con años de trabajo y experiencia acumulada en el sector público y privado.
+                        Entre nuestros servicios se destacan:
+
 
                     </p>
+                    <ul data-section="estudios-ambientales" data-value="lista">
+                        <li>Elaboración de estudios ambientales.</li>
+                        <li>Supervisión socioambiental de construcción de obras.</li>
+                        <li>Realización de proyectos y estudios en manejo de recursos naturales.</li>
+                    </ul>
                 </div>
             </div>
             <div class="row justify-content-center">
+                <div class="col-md descripcion-servicio">
 
-                <div class="col-md col-lg-3 ">
-                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body d-flex justify-content-center align-items-center">
-                            <a href="control-calidad-del-concreto.html"
-                                class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                    viewBox="0 0 16 16" style="width:2rem !important;">
-                                    <path
-                                        d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                                </svg>
-                                <h3 class="card-title text-center fs-5" data-section="control-materiales"
-                                    data-value="producto-1">Control
-                                    de calidad del concreto</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-md col-lg-3 ">
-                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body d-flex justify-content-center align-items-center">
-                            <a href="control-de-calidad-de-suelos.html"
-                                class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                    viewBox="0 0 16 16" style="width:2rem !important;">
-                                    <path
-                                        d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                                </svg>
-                                <h3 class="card-title text-center fs-5" data-section="control-materiales"
-                                    data-value="producto-2">Control
-                                    de calidad de los suelos</h3>
-                            </a>
-                        </div>
-                    </div>
+                <p data-section="estudios-ambientales" data-value="desc">
+                    María Raquel Chavarría Sacasa, es Licenciada en Biología y Recursos Naturales, de la Universidad
+                    Centroamericana y tiene el grado de Maestro en Ciencias Agropecuarias y de los Recursos Naturales
+                    Renovables, con especialidad en Sistemas de Producción con énfasis en Silvicultura y Agroforestería,
+                    del CATIE, Costa Rica. <br><br> Tiene 43 años de ejercer su carrera y tiene experiencia profesional
+                    en el ámbito ambiental, forestal, agroforestal, diagnósticos socioeconómicos, formulación y
+                    evaluación de proyectos, planes de manejo de cuencas, de fincas. Y de áreas protegidas.<br><br> En
+                    los últimos 19 años ha estado trabajando en la gestión ambiental realizando estudios de impacto
+                    ambiental. <br><br>También ha ocupado cargos de dirección de proyectos, coordinación de equipos de
+                    consultores y trabajado como facilitadora y capacitadora en talleres y cursos de capacitación.
+                    <br><br>Conoce el marco legal ambiental de Nicaragua (Ley 217 Ley General del Medio Ambiente y los
+                    Recursos Naturales; Decreto 20-2017, Sistema de evaluación ambiental de permisos y autorizaciones
+                    para el uso sostenible de los recursos naturales, etc.) y las salvaguardas ambientales de los bancos
+                    internacionales.
+
+                </p>
                 </div>
             </div>
         </div>
