--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="col-md col-lg-3 ">
                     <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body d-flex justify-content-center align-items-center">
-                            <a href="estudios-geotecnicos.html"
+                            <a href="estudios-ambientales.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
                                     viewBox="0 0 16 16" style="width:2rem !important;">
