--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -88,9 +88,9 @@
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="container">
+        <div class="container descripcion-servicio">
             <div class="row">
-                <div class="col-md descripcion-servicio">
+                <div class="col-md ">
                     <p data-section="control-materiales" data-value="resumen">En Geonicsa, nuestro compromiso con la
                         calidad va más allá de la geotecnia. Ofrecemos servicios especializados en el control de calidad
                         de materiales, asegurando que cada componente utilizado en su proyecto cumpla con los más altos
@@ -100,8 +100,10 @@
 
                     </p>
                 </div>
+                
             </div>
-            <div class="row justify-content-center">
+            
+            <div class="row justify-content-center descripcion-servicio">
 
                 <div class="col-md col-lg-3 ">
                     <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
@@ -137,6 +139,11 @@
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-md">
+                    <img src="img/servicios/ccm-002.jpg" style="width:100%; height:80%;object-fit: cover;" alt="">
                 </div>
             </div>
         </div>
