Correccion de texto y tamaño de la imagen

--- a/estudios-ambientales.html
+++ b/estudios-ambientales.html
@@ -115,7 +115,7 @@
                     Renovables, con especialidad en Sistemas de Producción con énfasis en Silvicultura y Agroforestería,
                     del CATIE, Costa Rica. <br><br> Tiene 43 años de ejercer su carrera y tiene experiencia profesional
                     en el ámbito ambiental, forestal, agroforestal, diagnósticos socioeconómicos, formulación y
-                    evaluación de proyectos, planes de manejo de cuencas, de fincas. Y de áreas protegidas.<br><br> En
+                    evaluación de proyectos, planes de manejo de cuencas, de fincas y de áreas protegidas.<br><br> En
                     los últimos 19 años ha estado trabajando en la gestión ambiental realizando estudios de impacto
                     ambiental. <br><br>También ha ocupado cargos de dirección de proyectos, coordinación de equipos de
                     consultores y trabajado como facilitadora y capacitadora en talleres y cursos de capacitación.
