--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -103,9 +103,9 @@
                 
             </div>
             
-            <div class="row justify-content-center descripcion-servicio">
+            <div class="row justify-content-center" style="margin-top: 4vh !important; margin-bottom: 4vh !important;">
 
-                <div class="col-md col-lg-3 ">
+                <div class="col-md col-lg-4 ">
                     <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="control-calidad-del-concreto.html"
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="col-md col-lg-3 ">
+                <div class="col-md col-lg-4 ">
                     <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="control-de-calidad-de-suelos.html"
@@ -141,9 +141,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-md">
-                    <img src="img/servicios/ccm-002.jpg" style="width:100%; height:80%;object-fit: cover;" alt="">
+            <div class="row">
+                <div class="col-md d-flex justify-content-center">
+                    <img src="img/servicios/ccm-002.jpg" class="img-ccm" alt="">
                 </div>
             </div>
         </div>
