Galeria de ES añadida

--- a/estudios-ambientales.html
+++ b/estudios-ambientales.html
@@ -109,23 +109,128 @@
                 <div class="col-md descripcion-servicio">
 
 
-                <p data-section="estudios-ambientales" data-value="desc">
-                    María Raquel Chavarría Sacasa, es Licenciada en Biología y Recursos Naturales, de la Universidad
-                    Centroamericana y tiene el grado de Maestro en Ciencias Agropecuarias y de los Recursos Naturales
-                    Renovables, con especialidad en Sistemas de Producción con énfasis en Silvicultura y Agroforestería,
-                    del CATIE, Costa Rica. <br><br> Tiene 43 años de ejercer su carrera y tiene experiencia profesional
-                    en el ámbito ambiental, forestal, agroforestal, diagnósticos socioeconómicos, formulación y
-                    evaluación de proyectos, planes de manejo de cuencas, de fincas y de áreas protegidas.<br><br> En
-                    los últimos 19 años ha estado trabajando en la gestión ambiental realizando estudios de impacto
-                    ambiental. <br><br>También ha ocupado cargos de dirección de proyectos, coordinación de equipos de
-                    consultores y trabajado como facilitadora y capacitadora en talleres y cursos de capacitación.
-                    <br><br>Conoce el marco legal ambiental de Nicaragua (Ley 217 Ley General del Medio Ambiente y los
-                    Recursos Naturales; Decreto 20-2017, Sistema de evaluación ambiental de permisos y autorizaciones
-                    para el uso sostenible de los recursos naturales, etc.) y las salvaguardas ambientales de los bancos
-                    internacionales.
+                    <p data-section="estudios-ambientales" data-value="desc">
+                        María Raquel Chavarría Sacasa, es Licenciada en Biología y Recursos Naturales, de la Universidad
+                        Centroamericana y tiene el grado de Maestro en Ciencias Agropecuarias y de los Recursos
+                        Naturales
+                        Renovables, con especialidad en Sistemas de Producción con énfasis en Silvicultura y
+                        Agroforestería,
+                        del CATIE, Costa Rica. <br><br> Tiene 43 años de ejercer su carrera y tiene experiencia
+                        profesional
+                        en el ámbito ambiental, forestal, agroforestal, diagnósticos socioeconómicos, formulación y
+                        evaluación de proyectos, planes de manejo de cuencas, de fincas y de áreas protegidas.<br><br>
+                        En
+                        los últimos 19 años ha estado trabajando en la gestión ambiental realizando estudios de impacto
+                        ambiental. <br><br>También ha ocupado cargos de dirección de proyectos, coordinación de equipos
+                        de
+                        consultores y trabajado como facilitadora y capacitadora en talleres y cursos de capacitación.
+                        <br><br>Conoce el marco legal ambiental de Nicaragua (Ley 217 Ley General del Medio Ambiente y
+                        los
+                        Recursos Naturales; Decreto 20-2017, Sistema de evaluación ambiental de permisos y
+                        autorizaciones
+                        para el uso sostenible de los recursos naturales, etc.) y las salvaguardas ambientales de los
+                        bancos
+                        internacionales.
 
-                </p>
+                    </p>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row justify-content-center">
+                            <div class="col-md ">
+                                <div class="card" style="width: 100%;">
+                                    <img src="./img/Estudios_Ambientales/1SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+
+                                </div>
+                            </div>
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/Estudios_Ambientales/2SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row justify-content-center">
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/Estudios_Ambientales/3SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+                                </div>
+                            </div>
+                            <div class="col-md ">
+                                <div class="card" style="width: 100%;">
+                                    <img src="./img/Estudios_Ambientales/4SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row justify-content-center">
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/Estudios_Ambientales/5SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+
+                                </div>
+                            </div>
+                            <div class="col-md ">
+                                <div class="card" style="width: 100%;">
+                                    <img src="./img/Estudios_Ambientales/6SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row justify-content-center">
+                            <div class="col-md">
+                                <div class="card" style="width: 100%">
+                                    <img src="./img/Estudios_Ambientales/7SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+
+                                </div>
+                            </div>
+                            <div class="col-md ">
+                                <div class="card" style="width: 100%;">
+                                    <img src="./img/Estudios_Ambientales/8SA.jpg" class="card-img-top imagen-proyectos"
+                                        loading="lazy">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
         <!--CONTACTANOS-->
