Añadidas img en Control de calidad

--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -189,6 +189,7 @@
                     del control de calidad del concreto y se seleccionan según los aspectos específicos que se desean
                     evaluar en un proyecto. Las pruebas proporcionan información valiosa para garantizar que el concreto
                     cumpla con los estándares requeridos y para prevenir posibles problemas a lo largo del tiempo.</p>
+                <img src="./img/servicios/ccc.jpg" class="img-ccm mx-auto d-block" alt="">
             </div>
 
             <!--CONTACTANOS-->
