--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -187,6 +187,8 @@
                     soporte para proyectos de construcción. La información recopilada ayuda a ajustar el contenido de
                     humedad durante la compactación para lograr la máxima densidad y eficiencia. El uso conjunto de
                     estos métodos proporciona una evaluación integral de la calidad de la compactación del suelo.</p>
+
+                <img src="./img/servicios/ccs.jpg" class="img-servicio mx-auto d-block" alt="">
             </div>
 
             <!--CONTACTANOS-->
