Añadida img perforación

--- a/perforacion.html
+++ b/perforacion.html
@@ -100,10 +100,6 @@
 
                     </p>
 
-                </div>
-
-
-                <div class="col-md descripcion-servicio">
                     <h3 class="fs-5" data-section="perforacion" data-value="servicios-titulo">Dentro de los servicios de
                         perforación que ofrecemos se incluyen:</h3>
                     <div class="d-flex" style="height: fit-content;">
@@ -129,7 +125,15 @@
                     </div>
 
                 </div>
+
+
+                <div class="col-md descripcion-servicio">
+
+                    <img src="./img/servicios/PERFORACION.JPG" class="img-servicio mx-auto d-block"  alt="">
+                    
+                </div>
             </div>
+
         </div>
 
         <!--CONTACTANOS-->
