--- a/index.html
+++ b/index.html
@@ -270,59 +270,60 @@
                     <div class="row justify-content-center">
                         <div class="col-md ">
                             <div class="card" style="width: 100%;">
-                                <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
-                                    class="card-img-top imagen-proyectos" loading="lazy">
+                                <img src="./img/proyectos/PROYECTO_ESTADIO_DIRIAMBA.jpg"
+                                    class="card-img-top imagen-proyectos" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Prueba aerodromo los brasiles</p>
+                                    <p class="card-text">PROYECTO ESTADIO DIRIAMBA</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 100%">
-                                <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                    loading="lazy">
+                                <img src="./img/proyectos/PROYECTO_BCIE.jpg" class="card-img-top imagen-proyectos"
+                                    alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">BONANZA HEMCO</p>
+                                    <p class="card-text">PROYECTO BCIE</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 100%">
-                                <img src="./img/proyectos/AEROPUERTO_CORN_ISLAND.jpg"
-                                    class="card-img-top imagen-proyectos" loading="lazy">
+                                <img src="./img/proyectos/PROYECTO_MIRADOR_PLAYA_CASARES.jpg" class="card-img-top imagen-proyectos"
+                                    alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">AEROPUERTO CORN ISLAND</p>
+                                    <p class="card-text">PROYECTO MIRADOR PLAYA CASARES</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
+
+                <div class="carousel-item ">
                     <div class="row justify-content-center">
                         <div class="col-md ">
                             <div class="card" style="width: 100%;">
-                                <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
-                                    class="card-img-top imagen-proyectos" loading="lazy">
+                                <img src="./img/proyectos/PROYECTO_AEROPUERTO_CORN_ISLAND.jpg"
+                                    class="card-img-top imagen-proyectos" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Prueba aerodromo los brasiles</p>
+                                    <p class="card-text">PROYECTO AEROPUERTO CORN ISLAND</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 100%">
-                                <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                    loading="lazy">
+                                <img src="./img/proyectos/PROYECTO_TUMARIN.JPG" class="card-img-top imagen-proyectos"
+                                    alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">texto aquí</p>
+                                    <p class="card-text">PROYECTO TUMARÍN</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 100%">
-                                <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                    loading="lazy">
+                                <img src="./img/proyectos/PROYECTO_CLUB_TERRAZA.jpeg"
+                                    class="card-img-top imagen-proyectos" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">texto aquí</p>
+                                    <p class="card-text">PROYECTO CLUB TERRAZA</p>
                                 </div>
                             </div>
                         </div>
