CAMBIO DE LOGO Y AGREGADO EL FOOTER

--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -158,7 +158,96 @@
     </div>
 
 
+    <!--FOOTER-->
+    <div class="container-fluid footer-tuneado">
+        <footer class="py-5">
+            <div class="row">
+                <div class="col-6 col-md-3 mb-3">
+                    <h5 data-section="footer" data-value="contacto">Contáctanos</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="#">
+                                <img class="d-inline" src="./img/icons/call_us_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">+505 5810-3203</p>
+                            </a>
+                        </li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="mailto:Info@geonicsa.com">
+                                <img class="d-inline" src="./img/icons/email_us.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">Info@geonicsa.com</p>
+                            </a>
+                        </li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="https://wa.me/50558103203?">
+                                <img class="d-inline" src="./img/icons/whatsappus_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">+505 5810-3203</p>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3">
+                    <h5 data-section="footer" data-value="horario">Horario</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                data-section="footer" data-value="dias-habiles">Lunes a
+                                Viernes:</a> 7:00 AM - 4:00 PM</li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                data-section="footer" data-value="sabado">Sábados:</a> 7:00 AM - 12:00 MD</li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                data-section="footer" data-value="horario-domingo">Domingos: <b>CERRADO</b></a> </li>
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3">
+                    <h5 data-section="footer" data-value="redes">Nuestras redes sociales</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="https://www.linkedin.com/company/geonicsa/about/?viewAsMember=true"
+                                target="_blank">
+                                <img class="d-inline" src="./img/icons/linkedin_icon.png"
+                                    style="width:2rem !important; height: 2rem !important; ">
+                                <p class="d-inline">LinkedIn</p>
+                            </a>
+                        </li>
+                        <li class="nav-item mb-2  align-middle li-footer">
+                            <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
+                                href="https://www.facebook.com/profile.php?id=61557121580415&mibextid=ZbWKwL"
+                                target="_blank">
+                                <img class="d-inline" src="./img/icons/facebook_icon.png"
+                                    style="width:2rem !important; height: 2rem !important;">
+                                <p class="d-inline">Facebook</p>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-4 offset-md-1 mb-3">
+                    <img src="./img/icons/location_icon.png" class="d-inline" style="width: 2.2rem !important;">
+                    <h4 class="d-inline" data-section="footer" data-value="ubicacion">Nuestra ubicación</h4>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.4817587951065!2d-86.31358561869213!3d12.14756960173846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f715787c0a35f9b%3A0x816de1748fe3ee28!2sLaboratorio%20geonic!5e0!3m2!1sen!2sni!4v1705983589300!5m2!1sen!2sni"
+                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>&copy; GEONICSA</p>
+
+            </div>
+        </footer>
     </div>
+    <!--FIN FOOTER-->
 
 
 
