Cambio link de Linkedin

--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -254,7 +254,7 @@
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="https://www.linkedin.com/company/geonicsa/about/?viewAsMember=true"
+                                href="https://www.linkedin.com/company/geonicsa/"
                                 target="_blank">
                                 <img class="d-inline" src="./img/icons/linkedin_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
